--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-locallibrary",
   "version": "0.0.0",
   "private": true,
+  "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
@@ -29,6 +30,7 @@
     "puppeteer-core": "^1.11.0"
   },
   "devDependencies": {
+    "node-sass": "^4.3.0",
     "colors": "^1.3.3",
     "nodemon": "^1.18.6",
     "serve-favicon": "^2.5.0"
