--- a/config3/mongodb/mongod.conf
+++ b/config3/mongodb/mongod.conf
@@ -1,12 +1,15 @@
 systemLog:
   destination: file
-  path: /usr/local/var/log/mongodb/mongo.log
-  # path: /data/mongodb/log/mongo.log
+  # path: /usr/local/var/log/mongodb/mongo.log
+  path: /tmp/mongodb/log/mongo.log
   logAppend: true
 storage:
-  dbPath: /usr/local/var/mongodb
-  # dbPath: /data/mongodb/data
+  # engine: wiredTiger
+  # engine: mmapv1
+  # dbPath: /usr/local/var/mongodb
+  dbPath: /tmp/mongodb/data
 processManagement:
-  fork: true
+  fork: false
 net:
   bindIp: 0.0.0.0
+
