--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 version: '3.1'
-
+networks:
+  docker_network:
 services:
   web:
     build:
@@ -15,13 +16,12 @@ services:
     volumes:
       - .:/home/www/express-locallibrary
       - /home/www/express-locallibrary/node_modules
-    # networks:
-    #   - node_network
     restart: always
     ports:
       - '4000:4000'
       - '80:4000'
       - '9229:9229'
+      - '28017:28017'
     tty: true
     privileged: true
     links:
@@ -30,28 +30,32 @@ services:
       - mongo
     environment:
       - DOCKER=1
+    networks:
+      - docker_network
 
   mongo:
     image: mongo
     build: config3/mongodb
     container_name: mongo
-    # command: mongod --config /etc/mongod.conf --logpath /data/mongodb/log --dbpath /data/mongodb/data --repair --fork
+    # command: mongod
+    # --config /etc/mongod.conf
+    # --logpath /tmp/mongodb/log --dbpath /tmp/mongodb/data --repair --fork --auth
     # environment:
     # - MONGO_INITDB_ROOT_USERNAME=root
     # - MONGO_INITDB_ROOT_PASSWORD=root
     # - MONGO_CONFIG_DIR=/etc/
-    # - MONGO_DATA_DIR=/data/mongodb/data
-    # - MONGO_LOG_DIR=/data/mongodb/log
-    volumes:
-      # - ./config3/mongodb/mongod.conf:/etc/mongod.conf
-      - /usr/local/var/mongodb
-      # - /usr/local/var/mongodb:/data/mongodb/data
-      # - /usr/local/var/log/mongodb:/data/mongodb/log
-    # expose:
-    #   - '27017'
-    # ports:
-    #   - '0.0.0.0:27017:27017'
+    # - MONGO_DATA_DIR=/tmp/mongodb/data
+    # - MONGO_LOG_DIR=/tmp/mongodb/log
+    # volumes:
+    # - $PWD/config3/mongodb/mongod.conf:/etc/mongod.conf
+    # - /usr/local/var/mongodb
+    # - /usr/local/var/mongodb:/tmp/mongodb/data
+    # - /usr/local/var/log/mongodb:/tmp/mongodb/log
+    expose:
+      - '27017'
+    ports:
+      - '0.0.0.0:27017:27017'
     tty: true
     privileged: true
-# networks:
-#   node_network:
+    networks:
+      - docker_network
