--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "debug": "nodemon -L --inspect=0.0.0.0 ./bin/www",
+    "docker": "docker-compose up -d --build",
+    "log": "docker-compose logs -f"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
