config:(mongo)使用官方镜像

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,18 @@
 node_modules
+.cache-loader
 npm-debug.log
+debug.log
+.DS_Store
+.idea
+.vscode
 package-lock.json
 *.pdf
-*.png
 *.md
 docker?
+dist
+config3/mongodb/data
+config3/mongodb/log
+config3/mongodb/mongodb-linux-x86_64-4.0.9
 .?
 .DS_Store
 .git
