--- a/config3/mongodb/dockerfile
+++ b/config3/mongodb/dockerfile
@@ -34,4 +34,4 @@ EXPOSE 27017
 # ENTRYPOINT ["/usr/bin/dumb-init", "--"]
 # CMD ["bin/bash"]
 # CMD [ "mongod","--bind_ip_all" ]
-CMD [ "bin/sh", "-c", "mongod --bind_ip_all" ]
+CMD [ "bin/sh", "-c", "mongod --bind_ip_all --config /etc/mongod.conf" ]
